--- a/about.qmd
+++ b/about.qmd
@@ -9,7 +9,7 @@ about:
       href: https://twitter.com
     - icon: linkedin
       text: LinkedIn
-      href: https://linkedin.com
+      href: https://linkedin.com/in/brenden-bready
     - icon: github
       text: Github
       href: https://github.com
